Changed connection layout
Made property changes change PropertiesChanged signal

Co-authored-by: omarhogni <omarhogni@users.noreply.github.com>

Cleaned up folder structure to allow multiple pages in one project

Added variables.js to gitignore, fixed configure script for DBUS

Added All to Pagination, Removed redundant data handling, changed DBUS error handling, fixed naming on DBUS interface and added description to register methods

--- a/cockpit/IPC/manifest.json
+++ b/cockpit/IPC/manifest.json
@@ -2,9 +2,17 @@
     "version": 0,
     "tools": {
         "tfc": {
-            "label": "TFC connections",
-            "path": "index.html"
-
+            "label": "TFC Connections",
+            "path": "index.html?service=connect"
+        },
+        "tfc2": {
+            "label": "TFC Configurator",
+            "path": "index.html?service=configure"
+        },
+        "tfc3": {
+            "label": "TFC List DBUS",
+            "path": "index.html?service=list"
         }
-    }
+    },
+    "content-security-policy": "default-src 'self' 'unsafe-inline' 'unsafe-eval'"
 }
