--- a/cockpit/IPC/package.json
+++ b/cockpit/IPC/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "7.21.8",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@patternfly/react-core": "^4.276.8",
+    "@patternfly/react-table": "^4.113.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
