mp units and std chrono duration represented the same in json confman hack for schema, maybe revert later fix confman helper class naming to capture typename and propagate to json schema fix cmake config integrating to mp units version 0.7 master add setting mp units support

--- a/libs/ec/CMakeLists.txt
+++ b/libs/ec/CMakeLists.txt
@@ -4,6 +4,7 @@ cmake_minimum_required(VERSION 3.21)
 find_path(BEXT_SML_INCLUDE_DIRS "boost/sml.hpp")
 find_package(fmt CONFIG REQUIRED)
 find_package(soem CONFIG REQUIRED)
+find_package(mp-units CONFIG REQUIRED)
 
 
 add_library(ec src/ec.cpp src/base.cpp)
@@ -23,6 +24,7 @@ target_link_libraries(ec
     soem
     tfc::ipc
     tfc::confman
+    mp-units::si
   PRIVATE
     fmt::fmt
 )
