--- a/libs/ec/tests/CMakeLists.txt
+++ b/libs/ec/tests/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_executable(test_ec_402 test_ec_402.cpp)
 target_link_libraries(test_ec_402 PRIVATE tfc::ec)
+add_executable(test_data_object_setting test_data_object_setting.cpp)
+target_link_libraries(test_data_object_setting PRIVATE tfc::ec)
 
 add_executable(test_ec_util test_ec_util.cpp)
 target_link_libraries(test_ec_util tfc::ec)
