use gcc-13 and ubuntu 23.04 in packaging pipelines

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -26,7 +26,9 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install libsystemd-dev cppcheck lsb-release wget software-properties-common gnupg g++-12 curl ninja-build autoconf-archive libtool autoconf meson gperf autopoint
+          sudo apt-get install software-properties-common
+          sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+          sudo apt-get install cppcheck lsb-release wget gnupg g++-13 curl ninja-build autoconf-archive libtool autoconf meson gperf autopoint
           curl https://apt.llvm.org/llvm.sh -o llvm.sh
           chmod +x llvm.sh
           sudo ./llvm.sh 16 all
