--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -17,6 +17,7 @@ jobs:
   build:
     name: ubuntu packaging
     runs-on: ubuntu-22.04
+    container: ubuntu:23.04
     strategy:
       fail-fast: false
       matrix:
@@ -25,24 +26,29 @@ jobs:
     steps:
       - name: install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y git curl zip unzip tar wget lsb-release gnupg cppcheck software-properties-common g++-12 g++-12-aarch64-linux-gnu ninja-build autoconf autoconf-archive meson gperf libcap-dev pkg-config libtool rpm autopoint doxygen python3-sphinx python3-sphinx-rtd-theme python3-breathe graphviz python3-myst-parser
-          sudo ln -s /usr/bin/aarch64-linux-gnu-gcc-12 /usr/bin/aarch64-linux-gnu-gcc
-          sudo ln -s /usr/bin/aarch64-linux-gnu-g++-12 /usr/bin/aarch64-linux-gnu-g++
+          apt-get update
+          apt-get install -y git curl zip unzip tar wget lsb-release gnupg cppcheck software-properties-common cmake g++-13 g++-13-aarch64-linux-gnu ninja-build autoconf autoconf-archive meson gperf libcap-dev pkg-config libtool rpm autopoint doxygen python3-venv python3-sphinx python3-sphinx-rtd-theme python3-breathe graphviz python3-myst-parser npm
+          ln -s /usr/bin/aarch64-linux-gnu-gcc-13 /usr/bin/aarch64-linux-gnu-gcc
+          ln -s /usr/bin/aarch64-linux-gnu-g++-13 /usr/bin/aarch64-linux-gnu-g++
 
       - uses: actions/checkout@v3
       - name: commissioning
         run: |
-          sudo ./scripts/commissioning.sh
-          sudo chown $USER:$USER -R /var/tfc  # todo fix this differently
-          sudo chown $USER:$USER -R /run/tfc
-          sudo sed -i 's|deny own=|allow own=|g' /usr/share/dbus-1/system.conf
-          sudo sed -i 's|deny send_type="method_call"|allow send_type="method_call"|g' /usr/share/dbus-1/system.conf
-          sudo dbus-send --system --type=method_call --dest=org.freedesktop.DBus / org.freedesktop.DBus.ReloadConfig
+          ./scripts/commissioning.sh
+          chown $USER:$USER -R /var/tfc  # todo fix this differently
+          chown $USER:$USER -R /run/tfc
+          
+          apt install dbus-broker
+          dbus-daemon --system
+          
+          sed -i 's|deny own=|allow own=|g' /usr/share/dbus-1/system.conf
+          sed -i 's|deny send_type="method_call"|allow send_type="method_call"|g' /usr/share/dbus-1/system.conf
+          dbus-send --system --type=method_call --dest=org.freedesktop.DBus / org.freedesktop.DBus.ReloadConfig
 
       - name: Restore artifacts, or setup vcpkg (do not install any package)
         uses: lukka/run-vcpkg@v11
         with:
+          vcpkgDirectory: '/opt/vcpkg'
           vcpkgGitCommitId: '4eda0e3c7062e61dd89a91357ddc50f742da75ef'
           vcpkgJsonGlob: 'vcpkg.json'
 
@@ -76,7 +82,7 @@ jobs:
       - name: Test install
         if: matrix.architecture == 'x86_64'
         run: |
-          sudo apt-get install ./build/pack-gcc-${{matrix.build_type}}/*.deb
+          apt-get install -y ./build/pack-gcc-${{matrix.build_type}}/*.deb
 
       - name: Upload debian package
         if: matrix.architecture == 'x86_64'
