--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -17,33 +17,18 @@ jobs:
   build:
     name: ubuntu packaging
     runs-on: ubuntu-22.04
-    container: ubuntu:23.04
+    container: ghcr.io/skaginn3x/skaginn3x/framework/tfc-toolchain:sha-0700975
     strategy:
       fail-fast: false
       matrix:
         build_type: [debug, release]
         architecture: [ x86_64, aarch64 ]
     steps:
-      - name: install dependencies
-        run: |
-          apt-get update
-          apt-get install -y git curl zip unzip tar wget lsb-release gnupg cppcheck software-properties-common cmake g++-13 g++-13-aarch64-linux-gnu ninja-build autoconf autoconf-archive meson gperf libcap-dev pkg-config libtool rpm autopoint doxygen python3-venv python3-sphinx python3-sphinx-rtd-theme python3-breathe graphviz python3-myst-parser npm
-          ln -s /usr/bin/aarch64-linux-gnu-gcc-13 /usr/bin/aarch64-linux-gnu-gcc
-          ln -s /usr/bin/aarch64-linux-gnu-g++-13 /usr/bin/aarch64-linux-gnu-g++
-
       - uses: actions/checkout@v3
-      - name: commissioning
+      - name: start dbus
         run: |
-          ./scripts/commissioning.sh
-          chown $USER:$USER -R /var/tfc  # todo fix this differently
-          chown $USER:$USER -R /run/tfc
-          
-          apt install dbus-broker
-          dbus-daemon --system
-          
-          sed -i 's|deny own=|allow own=|g' /usr/share/dbus-1/system.conf
-          sed -i 's|deny send_type="method_call"|allow send_type="method_call"|g' /usr/share/dbus-1/system.conf
-          dbus-send --system --type=method_call --dest=org.freedesktop.DBus / org.freedesktop.DBus.ReloadConfig
+          ls
+          ./start-dbus.sh
 
       - name: Restore artifacts, or setup vcpkg (do not install any package)
         uses: lukka/run-vcpkg@v11
