--- a/.github/workflows/tfc-toolchain.yml
+++ b/.github/workflows/tfc-toolchain.yml
@@ -1,6 +1,8 @@
 name: tfc-toolchain
 on:
-  workflow_dispatch:
+  pull_request:
+    paths:
+      - '.github/workflows/tfc-toolchain.yml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
