--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: start dbus
         run: |
-          /home/tfc/start-dbus.sh
+          dbus-daemon --system
 
       - name: Restore artifacts, or setup vcpkg (do not install any package)
         uses: lukka/run-vcpkg@v11
