--- a/cockpit/IPC/tsconfig.json
+++ b/cockpit/IPC/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2015",
     "lib": [
       "dom",
       "dom.iterable",
@@ -31,6 +31,7 @@
     },
   },
   "include": [
-    "src"
+    "src/",
+    "**/create_link.js"
   ]
 }
