Mp units and std chrono duration support with glaze (#93)
mp units and std chrono duration represented the same in json
confman hack for schema, maybe revert later
fix confman helper class naming to capture typename and propagate to json schema
fix cmake config
integrating to mp units version 0.7 master
add setting mp units support
install to /usr/... instead of /usr/local/...
install contents of build instead of the build directory of cockpit plugin
bleeding edge glaze now with constexpr support
deprecation warnings fixed from glaze
new toolchain with gcc 13.1.0 instead of gcc 13.0.1 which is buggy

--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     name: ubuntu packaging
     runs-on: ubuntu-22.04
-    container: ghcr.io/skaginn3x/skaginn3x/framework/tfc-toolchain:sha-ea00ad8
+    container: ghcr.io/skaginn3x/skaginn3x/framework/tfc-toolchain:sha-7315878
     strategy:
       fail-fast: false
       matrix:
@@ -28,6 +28,8 @@ jobs:
       - name: start dbus
         run: |
           dbus-daemon --system
+          apt-get update
+          apt-get upgrade -y
 
       - name: Restore artifacts, or setup vcpkg (do not install any package)
         uses: lukka/run-vcpkg@v11
