--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,6 +3,8 @@ name: docs
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -22,6 +24,8 @@ jobs:
       - name: Build
         run: |
           cmake --workflow --preset workflow-docs
+          # hax for next command
+          mkdir -p /home/runner/work/_temp/
 
       - name: Upload read the docs
         uses: actions/upload-pages-artifact@v0
@@ -31,7 +35,7 @@ jobs:
           retention-days: 1
 
   deploy:
-    if: ${{ github.event.action }} == 'opened'
+    if: github.ref == 'refs/heads/main'
     name: 'Deploy github pages'
     # Add a dependency to the build job
     needs: build
