io context test with pybind

--- a/exes/python/CMakeLists.txt
+++ b/exes/python/CMakeLists.txt
@@ -1,13 +1,14 @@
-add_executable(tfcpython main.cpp)
+add_executable(tfc-python main.cpp)
 
 find_package(Python3 COMPONENTS Development REQUIRED)
 find_package(pybind11 CONFIG REQUIRED)
 find_package(Boost REQUIRED COMPONENTS program_options)
 
-target_link_libraries(tfcpython
+target_link_libraries(tfc-python
   PRIVATE
     tfc::base
     tfc::logger
+    tfc::stx
     Boost::boost
     Boost::program_options
     Python3::Python
