ehtercat move main source to src

--- a/exes/ec/CMakeLists.txt
+++ b/exes/ec/CMakeLists.txt
@@ -6,7 +6,6 @@ find_package(fmt CONFIG REQUIRED)
 find_package(soem CONFIG REQUIRED)
 find_package(mp-units CONFIG REQUIRED)
 
-
 add_library(ec src/ec.cpp src/base.cpp)
 add_library(tfc::ec ALIAS ec)
 
@@ -30,7 +29,14 @@ target_link_libraries(ec
     fmt::fmt
 )
 
-add_library_to_docs(tfc::ec)
+add_executable(ethercat src/main.cpp)
+
+find_package(Boost REQUIRED COMPONENTS program_options)
+target_link_libraries(ethercat
+  PUBLIC
+    tfc::ec
+    Boost::program_options
+)
 
 if (BUILD_TESTING)
   add_subdirectory(tests)
