92 move ethercat to exes (#100)
* move soem_interface to its own place

* move ethercat to exes directory

* ehtercat move main source to src

* add ethercat systemd file and add it to install

* add soem interface to docs and add missing dependency of stx

--- a/exes/ec/CMakeLists.txt
+++ b/exes/ec/CMakeLists.txt
@@ -6,7 +6,6 @@ find_package(fmt CONFIG REQUIRED)
 find_package(soem CONFIG REQUIRED)
 find_package(mp-units CONFIG REQUIRED)
 
-
 add_library(ec src/ec.cpp src/base.cpp)
 add_library(tfc::ec ALIAS ec)
 
@@ -24,13 +23,46 @@ target_link_libraries(ec
     soem
     tfc::ipc
     tfc::confman
+    tfc::soem_interface
     mp-units::si
   PRIVATE
     fmt::fmt
 )
 
-add_library_to_docs(tfc::ec)
+add_executable(ethercat src/main.cpp)
+
+find_package(Boost REQUIRED COMPONENTS program_options)
+target_link_libraries(ethercat
+  PUBLIC
+    tfc::ec
+    Boost::program_options
+)
 
 if (BUILD_TESTING)
   add_subdirectory(tests)
 endif ()
+
+include(GNUInstallDirs)
+install(
+  FILES
+    systemd/ethercat.service
+  DESTINATION
+    ${CMAKE_INSTALL_LIBDIR}/systemd/user/
+  CONFIGURATIONS Release
+)
+
+install(
+  TARGETS
+    ethercat
+  DESTINATION
+    ${CMAKE_INSTALL_BINDIR}
+  CONFIGURATIONS Release
+)
+
+install(
+  TARGETS
+    ethercat
+  DESTINATION
+    ${CMAKE_INSTALL_BINDIR}/debug/
+  CONFIGURATIONS Debug
+)
