--- a/libs/configure_options/CMakeLists.txt
+++ b/libs/configure_options/CMakeLists.txt
@@ -2,7 +2,7 @@ project(configure_options)
 cmake_minimum_required(VERSION 3.21)
 
 
-configure_file(configure_options.hpp.in ${CMAKE_CURRENT_LIST_DIR}/inc/public/tfc/configure_options.hpp)
+configure_file(${CMAKE_CURRENT_LIST_DIR}/configure_options.hpp.in ${CMAKE_CURRENT_LIST_DIR}/inc/public/tfc/configure_options.hpp)
 
 add_library(configure_options INTERFACE)
 add_library(tfc::configure_options ALIAS configure_options)
@@ -13,7 +13,7 @@ target_include_directories(configure_options
     $<INSTALL_INTERFACE:include>
 )
 
-configure_file(dbus-tfc.conf.in ${CMAKE_CURRENT_LIST_DIR}/generated/dbus-tfc.conf)
+configure_file(${CMAKE_CURRENT_LIST_DIR}/dbus-tfc.conf.in ${CMAKE_CURRENT_LIST_DIR}/generated/dbus-tfc.conf)
 
 include(tfc_install)
 tfc_install_lib(configure_options)
