MQTT broadcaster using Spark Plug B

--- a/exes/CMakeLists.txt
+++ b/exes/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(operation-mode)
 add_subdirectory(tfcctl)
 add_subdirectory(ipc-ruler)
 add_subdirectory(signal_source)
+add_subdirectory(mqtt-broadcaster)
