--- a/exes/CMakeLists.txt
+++ b/exes/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(gpio)
 add_subdirectory(operation-mode)
 add_subdirectory(tfcctl)
 add_subdirectory(ipc-ruler)
+add_subdirectory(mqtt-broadcaster)
