add c++20 coroutines for detail signal and slot packet returns std::expected example of co_yield alongside ipc coroutine example update toolchain sha update vcpkg in toolchain debug tests in pipeline

--- a/.github/workflows/tfc-toolchain.yml
+++ b/.github/workflows/tfc-toolchain.yml
@@ -4,6 +4,7 @@ on:
     paths:
       - '.github/workflows/tfc-toolchain.yml'
       - 'containers/tfc-toolchain.dockerfile'
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
