--- a/libs/tfcConfig.cmake.in
+++ b/libs/tfcConfig.cmake.in
@@ -5,6 +5,7 @@ find_package(fmt CONFIG REQUIRED)
 find_package(Boost REQUIRED COMPONENTS program_options)
 find_package(unofficial-sdbusplus CONFIG REQUIRED)
 find_package(magic_enum CONFIG REQUIRED)
+find_package(mp-units CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 find_package(ZeroMQ REQUIRED)
 
