--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,6 +25,8 @@ jobs:
         run: |
           cmake --workflow --preset workflow-docs
           # hax for next command
+          echo "where am i"
+          ls
           mkdir -p /home/runner/work/_temp/
 
       - name: Upload read the docs
