add protobuf for sparkplug_b

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(confman)
 add_subdirectory(ipc)
 add_subdirectory(soem_interface)
 add_subdirectory(operation_mode)
+add_subdirectory(mqtt-sparkplug)
 
 add_library(tfc INTERFACE)
 add_library(tfc::tfc ALIAS tfc)
