Added async-mqtt from our vcpkg registry

--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -16,7 +16,8 @@
         "libxcrypt",
         "sdbusplus",
         "small-vectors",
-        "mp-units"
+        "mp-units",
+        "async-mqtt"
       ]
     }
   ],
