--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -2,7 +2,7 @@
   "default-registry": {
     "kind": "git",
     "repository": "https://github.com/microsoft/vcpkg",
-    "baseline": "fbc868ee5e12e3e81f464104be246ec06553c274"
+    "baseline": "7771648f32626142222bbd3b91421e53314bee69"
   },
   "registries": [
     {
@@ -15,8 +15,7 @@
         "libsystemd",
         "libxcrypt",
         "sdbusplus",
-        "small-vectors",
-        "mp-units"
+        "small-vectors"
       ]
     }
   ],
